--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -2,32 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer components {
+  .links {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+   
+    animation: fadeIn 1s forwards;
   }
-}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+  .links p {
+   
+    color: white;
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+    
+    transition: transform 0.3s ease, background-color 0.3s ease;
+    @apply bg-blue-500 rounded-sm
+  }
+
+  .links p:hover {
+    transform: scale(1.1);
+    @apply bg-blue-700
   }
 }
