added daisyui navbar and implemented profile page

--- a/client/components/navbarstyles.css
+++ b/client/components/navbarstyles.css
@@ -5,6 +5,7 @@
 @layer components {
     .link {
         transition: background-color 0.3s ease;
+        @apply no-underline;
     }
 
     .link:hover {
